fix hide sidebar visibility on pages without a 'new' menu

--- a/sass/application.scss
+++ b/sass/application.scss
@@ -437,6 +437,7 @@ select {
     position: relative;
     padding-left: 3.8em;
     z-index: 0;
+    margin-left: 10px;
   }
 
   .home {
@@ -448,8 +449,9 @@ select {
     box-shadow: inset -1px 0 0 rgba(white, 0.15), -1px 0 0 rgba(white, 0.15);
     position: absolute;
     top: 0;
-    left: 1px;
+    left: 0px;
     padding: 0.2em;
+    padding-left: 0.1em;
     text-align: center;
 
     &:before {
@@ -707,6 +709,7 @@ select {
     left: 0;
     cursor: pointer;
     color: $blue;
+    text-shadow: 1px 1px 1px $white, -1px -1px 1px $white, 1px -1px 1px $white, -1px 1px 1px $white;
   }
 
   #sidebar {
